--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -1,7 +1,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
+  username: solyanko-api
   pool: 5
 
 development:
