set up CORS and user auth

--- a/config/secrets.yml.sample
+++ b/config/secrets.yml.sample
@@ -1,2 +1,7 @@
 development:
   secret_key_base:
+  omniauth:
+    facebook:
+      app_id: 1963796190518268
+      app_secret: 3a94d01fcee6cf7f716d3f6938e88f0a
+
